# rust-server

./: .gitattributes  .gitignore  .luacheckrc  .protolint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  STATUS.md  build.rs  notes.md
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
examples/: chat_filter.rs  chat_stream.rs
installer/: README.MD  install.py  main.py
lua/: grpc-hook.lua  grpc-mission.lua  grpc.lua
lua/DCS-gRPC/: grpc-hook.lua  grpc-mission.lua  grpc.lua  version.lua
lua/DCS-gRPC/exporters/: object.lua
lua/DCS-gRPC/methods/: atmosphere.lua  coalitions.lua  controllers.lua  custom.lua  group.lua  hook.lua  mission.lua  net.lua  timer.lua  trigger.lua  unit.lua  world.lua
lua/Hooks/: DCS-gRPC.lua
lua/exporters/: object.lua
lua/methods/: atmosphere.lua  coalition.lua  coalitions.lua  controllers.lua  custom.lua  event_stream.lua  group.lua  hook.lua  mission.lua  timer.lua  trigger.lua  unit.lua  world.lua
plugin-example/: Cargo.toml  build.rs  plugin.h
plugin-example/protos/example/: example.proto
plugin-example/protos/example/greeter/v0/: greeter.proto
plugin-example/src/: ffi.rs  lib.rs  main.rs
proto/: dcs.proto
protos/: atmosphere.proto  coalition.proto  coalitions.proto  common.proto  controller.proto  controllers.proto  custom.proto  dcs.proto  dcs_mission.proto  event_stream.proto  group.proto  hook.proto  mission.proto  timer.proto  trigger.proto  unit.proto  world.proto
protos/dcs/: dcs.proto
protos/dcs/administration/v0/: administration.proto
protos/dcs/atmosphere/: atmosphere.proto
protos/dcs/atmosphere/v0/: atmosphere.proto
protos/dcs/coalition/: coalition.proto
protos/dcs/coalition/v0/: coalition.proto
protos/dcs/common/: common.proto
protos/dcs/common/v0/: common.proto
protos/dcs/controller/: controller.proto
protos/dcs/controller/v0/: controller.proto
protos/dcs/custom/: custom.proto
protos/dcs/custom/v0/: custom.proto
protos/dcs/group/: group.proto
protos/dcs/group/v0/: group.proto
protos/dcs/hook/: hook.proto
protos/dcs/hook/v0/: hook.proto
protos/dcs/metadata/v0/: metadata.proto
protos/dcs/mission/: mission.proto
protos/dcs/mission/v0/: mission.proto
protos/dcs/net/v0/: net.proto
protos/dcs/srs/v0/: srs.proto
protos/dcs/timer/: timer.proto
protos/dcs/timer/v0/: timer.proto
protos/dcs/trigger/: trigger.proto
protos/dcs/trigger/v0/: trigger.proto
protos/dcs/tts/v0/: tts.proto
protos/dcs/unit/: unit.proto
protos/dcs/unit/v0/: unit.proto
protos/dcs/world/: world.proto
protos/dcs/world/v0/: world.proto
repl/: Cargo.toml
repl/src/: main.rs
src/: authentication.rs  chat.rs  config.rs  fps.rs  hot_reload.rs  integrity.rs  lib.rs  plugins.rs  rpc.rs  server.rs  service.rs  services.rs  shutdown.rs  srs.rs  stats.rs  stream.rs
src/rpc/: administration.rs  atmosphere.rs  coalition.rs  controller.rs  custom.rs  group.rs  hook.rs  metadata.rs  mission.rs  net.rs  srs.rs  timer.rs  trigger.rs  tts.rs  unit.rs  world.rs
srs/: Cargo.toml
srs/src/: client.rs  lib.rs  message.rs  messages_codec.rs  stream.rs  voice_codec.rs  voice_stream.rs
stubs/: Cargo.toml  build.rs
stubs/src/: administration.rs  atmosphere.rs  coalition.rs  common.rs  controller.rs  custom.rs  group.rs  hook.rs  lib.rs  metadata.rs  mission.rs  net.rs  srs.rs  timer.rs  trigger.rs  tts.rs  unit.rs  utils.rs  world.rs
tts/: Cargo.toml
tts/src/: aws.rs  azure.rs  bs1770.rs  coqui.rs  gcloud.rs  lib.rs  parler.rs  piper.rs  win.rs
