[workspace]
members = [
  "repl",
  "stubs",
]

[workspace.package]
version = "0.6.0"
license = "AGPL-3.0-or-later"
authors = ["Markus Ast <m@rkusa.st>"]
rust-version = "1.64"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.8"
thiserror = "1.0"

[package]
name = "dcs-grpc"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dcs-module-ipc = "0.7"
futures-util = "0.3"
igrf = "0.2"
libloading = { version = "0.7", optional = true }
log4rs = "1.0"
log = "0.4"
mlua = { version = "0.8", default-features = false, features = ["lua51", "module", "serialize"] }
once_cell = "1.4.0"
pin-project = "1.0"
serde.workspace = true
serde_json.workspace = true
stubs = { package = "dcs-grpc-stubs", path = "./stubs", features = ["server"] }
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic.workspace = true

[features]
default = []
hot-reload = ["libloading"]
