[workspace]
members = [
  "repl",
  "srs",
  "stubs",
  "tts",
]

[workspace.package]
version = "0.7.1"
license = "AGPL-3.0-or-later"
authors = ["Markus Ast <m@rkusa.st>"]
rust-version = "1.64"
edition = "2021"

[workspace.dependencies]
base64 = "0.13"
bytes = "1.2"
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "io-util", "net", "sync", "time", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.8"

[package]
name = "dcs-grpc"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
dcs-module-ipc = "0.7"
futures-util.workspace = true
igrf = "0.2"
libloading = { version = "0.8", optional = true }
log4rs = "1.0"
log.workspace = true
mlua = { version = "0.8", default-features = false, features = ["lua51", "module", "serialize"] }
once_cell = "1.4.0"
pin-project = "1.0"
serde.workspace = true
serde_json.workspace = true
srs = { package = "dcs-grpc-srs", path = "./srs" }
stubs = { package = "dcs-grpc-stubs", path = "./stubs", features = ["server"] }
thiserror.workspace = true
tts = { package = "dcs-grpc-tts", path = "./tts" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true

[build-dependencies]
walkdir = "2.3"

[features]
default = []
hot-reload = ["libloading"]
