[package]
name = "plugin-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plugin"
path = "src/main.rs"

[dependencies]
once_cell = "1.10"
prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }
stubs = { package = "dcs-grpc-stubs", version = "0.1", path = "../stubs", features = ["client"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.6"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.6"
