[package]
name = "dcs-grpc-repl"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.56"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
stubs = { package = "dcs-grpc-stubs", version = "0.1", path = "../stubs", features = ["client"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tonic = "0.6"
