[package]
name = "dcs-grpc-repl"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "3.0", features = ["derive"] }
stubs = { package = "dcs-grpc-stubs", path = "../stubs", features = ["client"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tonic.workspace = true
