[package]
name = "dcs-grpc-srs"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
byteorder = "1.3"
bytes.workspace = true
futures-util.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
thiserror.workspace = true
tokio-stream.workspace = true
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio.workspace = true
uuid = { version = "1.1", features = ["v4"] }
