[package]
name = "dcs-grpc-stubs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.56"

[dependencies]
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
protoc-bundled = { git = "https://github.com/rkusa/protoc-bundled.git", rev = "3.21.6" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
server = []
client = []
