[package]
name = "dcs-grpc-stubs"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
prost = "0.12"
prost-types = "0.12"
serde.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build = "0.11"
protoc-bundled = { git = "https://github.com/rkusa/protoc-bundled.git", rev = "27.0.0" }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
server = []
client = []
