[package]
name = "dcs-grpc-tts"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
audiopus = "0.2"
base64.workspace = true
bytes.workspace = true
candle-core = { version = "0.7", features = ["cuda"] }
candle-hf-hub = { version = "0.3", default-features = false, features = [
    "tokio",
] }
candle-nn = { version = "0.7", features = ["cuda"] }
candle-transformers = { version = "0.7", features = ["cuda"] }
log.workspace = true
ogg = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rubato = "0.16"
rusoto_core = { version = "0.48", default-features = false, features = [
    "rustls",
] }
rusoto_credential = "0.48"
rusoto_polly = { version = "0.48", default-features = false, features = [
    "rustls",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tokio.workspace = true

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56"
features = [
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Media_SpeechSynthesis",
]
